Fix next slide arrow on ios (definitively)

--- a/src/style/05-objects/_objects.screens.scss
+++ b/src/style/05-objects/_objects.screens.scss
@@ -256,6 +256,10 @@ article.boussole_glide {
         font-weight: 700;
     }
 
+    .next_slide{
+        height:100%;
+    }
+
     .axes {
         display: grid;
         grid-template-rows: repeat(4, minmax(50px, 90px));
